# ReverseImageSearch

./: README.md  app.py  core.py  database.py  docker-compose.yml  embeddings.pkl  requirements.txt  streamlit_app.py
annoyindex/: app.py
fastapi/: Dockerfile  README.md  batch_index.py  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
fastapi/app/: main.py
fastapi/app/api/: deps.py
fastapi/app/api/v1/endpoints/: index.py  search.py
fastapi/app/core/: config.py
fastapi/app/crud/: image_crud.py
fastapi/app/db/: session.py
fastapi/app/models/: image.py
fastapi/app/repository/: image_repo.py
fastapi/app/schemas/: image.py
fastapi/app/services/: clip_service.py  image_service.py  search_service.py
fastapi/web/: index.html  script.js  style.css
python/: app.py
scratch/: verify_lbp.py
streamlit/: README.md  core.py  database.py  requirements.txt  streamlit_app.py
streamlit2/: core.py  database.py  requirements.txt  streamlit_app.py
streamlittest/: core.py  database.py  streamlit_app.py
streamlittest_moonvit/: Dockerfile  core.py  database.py  deploy_podman.sh  docker-compose.yml  requirements_docker.txt  streamlit_app.py  verify_moonvit.py
